--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 975202634271191074
 textchannel = 975202837900439632
 ladderchannel = 
 jungsanchannel = 
