--- a/boss.ini
+++ b/boss.ini
@@ -173,3 +173,15 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
+bossname = 쿠스
+gentime = 06:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
+bossname = 네크로스
+gentime = 04:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 입니다. 어여오세요
+
